<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
    android:layout_height="match_parent">



    <TextView
        android:text="@string/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mail"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_mail"
        android:textAlignment="viewStart"
        android:hint="@string/et_mail"
        android:layout_below="@+id/tv_mail"
        android:layout_alignStart="@+id/tv_mail" />
    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/tv_mail"
        android:layout_alignStart="@+id/tv_mail"
        android:layout_marginTop="58dp"
        android:layout_alignEnd="@+id/et_mail" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:textAlignment="viewStart"
        android:hint="@string/et_password"
        android:layout_below="@+id/tv_password"
        android:layout_alignStart="@+id/tv_password" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b_login"
        android:layout_below="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="11dp" />

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_login"
        android:layout_centerHorizontal="true"
        android:id="@+id/b_register" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_login"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignTop="@+id/b_login" />

</RelativeLayout>