<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/welcome_back"
        android:scaleType="centerCrop"
        android:id="@+id/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#99ffffff"
        android:layout_margin="16dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/welcometext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description" />

    </LinearLayout>

    <Button
        android:text="@string/grant_permission"
        android:layout_marginBottom="16dp"
        android:onClick="grantPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/start" />


</RelativeLayout>